# argument-summarization

./: .gitignore  README.md  pyproject.toml
argument_summarization/: data.py  kpa.py  metrics.py
argument_summarization/baselines/: smatchtopr.py
argument_summarization/scorers/: bart.py  bleurt.py
scripts/: evaluate_kpg.py  evaluate_kpm.py  lower_limit.sh  lower_limit_kpg.sh  perspectrum_sources.sh  run_kpa.py  table_data_overview.py
test/: perspectrum_extract.py  test_splits.py
