[project]
name = "argument-summarization"
description = ""
version = "1.0.0"
authors = [
    { name = "Michiel van der Meer", email = "m.t.van.der.meer@liacs.leidenuniv.nl" },
]
dependencies = [
    "python-dotenv",
    "debater-python-api",
    "openai",
    "evaluate",
    "sacrerouge",
    "nltk",
    "tqdm",
    "pandas",
    "sentence_transformers",
    "fast-pagerank",
    "tiktoken",
    "bert-score",
    "scikit-learn",
]

[tool.setuptools]
py-modules = ["argument_summarization"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
